tests/snapshots/bugs-structure_stats-armed_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                      = Fortizar
ship/scanStrength                              = 600.000000
ship/passiveShieldEffectiveRechargeRate        = 0.140630
ship/passiveShieldRechargeRate                 = 0.112504
ship/ehp                                       = 109687498.365529
ship/shieldThermalDamageEffectiveResonance     = 0.200000
ship/shieldKineticDamageEffectiveResonance     = 0.200000
ship/shieldExplosiveDamageEffectiveResonance   = 0.200000
ship/shieldEmDamageEffectiveResonance          = 0.200000
ship/hullThermalDamageEffectiveResonance       = 0.200000
ship/hullKineticDamageEffectiveResonance       = 0.200000
ship/hullExplosiveDamageEffectiveResonance     = 0.200000
ship/hullEmDamageEffectiveResonance            = 0.200000
ship/armorThermalDamageEffectiveResonance      = 0.200000
ship/armorKineticDamageEffectiveResonance      = 0.200000
ship/armorExplosiveDamageEffectiveResonance    = 0.200000
ship/armorEmDamageEffectiveResonance           = 0.200000
ship/shieldEhp                                 = 42187499.371357
ship/hullEhp                                   = 33749999.497086
ship/armorEhp                                  = 33749999.497086
ship/shieldDamageEffectiveResonance            = 0.800000
ship/hullDamageEffectiveResonance              = 0.800000
ship/armorDamageEffectiveResonance             = 0.800000
ship/damagePerSecondWithReload                 = 870.294118
ship/damagePerSecondWithoutReload              = 944.166667
ship/damageAlpha                               = 5720.000000
ship/powerFree                                 = 2750000.000000
ship/cpuFree                                   = 41300.000000
ship/capacitorDepletesIn                       = -1.000000
ship/capacitorPeakDeltaPercentage              = 79.264000
ship/capacitorPeakDelta                        = 229.351852
ship/capacitorPeakLoad                         = 60.000000
ship/capacitorPeakRecharge                     = 289.351852
ship/hp                                        = 27000000.000000
ship/powerOutput                               = 3375000.000000
ship/powerLoad                                 = 625000.000000
ship/cpuOutput                                 = 47500.000000
ship/cpuLoad                                   = 6200.000000
ship/rechargeRate                              = 4320000.000000
ship/maxTargetRange                            = 475000.000000
ship/scanSpeed                                 = 1875.000000
ship/scanRadarStrength                         = 600.000000
ship/scanLadarStrength                         = 600.000000
ship/scanMagnetometricStrength                 = 600.000000
ship/scanGravimetricStrength                   = 600.000000
ship/shieldCapacity                            = 33750000.000000
ship/armorHP                                   = 27000000.000000
ship/maxResearchGangSize                       = 30.000000
ship/shieldRechargeRate                        = 749999996928.000000
ship/capacitorCapacity                         = 500000.000000
ship/shieldUniformity                          = 1.250000
ship/shipBonus2AF                              = 25.000000
ship/shipBonusGC                               = 25.000000
ship/shipBonusCC                               = 25.000000
ship/shipBonusMB                               = 25.000000
ship/shipBonusCB                               = 25.000000
ship/shipBonusAB                               = 25.000000
ship/shipBonusMI                               = 25.000000
ship/shipBonusAI                               = 25.000000
ship/shipBonusCI                               = 25.000000
ship/shipBonusGI                               = 25.000000
ship/scanResolution                            = 50.000000
ship/advancedAgility                           = 0.750000
ship/jumpDriveConsumptionAmount                = 1000.000000
ship/advancedCapitalAgility                    = 0.750000
ship/jumpDriveCapacitorNeed                    = 0.750000
ship/fighterCapacity                           = 375000.000000
ship/structureFullPowerStateHitpointMultiplier = 4.000000
ship/structurePowerStateArmorPlatingMultiplier = 1.000000
ship/shipBonusUF1                              = 5.000000
ship/shipBonusUF2                              = 5.000000
ship/shipBonusUC1                              = 5.000000
ship/shipBonusUC2                              = 5.000000
ship/shipBonusUB1                              = 5.000000
ship/shipBonusUB2                              = 5.000000
ship/conduitPassengerBonusModAdd               = 25.000000
ship/shipBonusOreDestroyer1                    = 25.000000
ship/shipBonusOreDestroyer2                    = 25.000000
ship/shipBonusOreDestroyer3                    = 25.000000
ship/shipBonusSoEECS1                          = 25.000000
ship/shipBonusSoEECS2                          = 25.000000
ship/shipBonusSoEECS3                          = 25.000000
ship/shipBonusSoEECS4                          = 25.000000
ship/shipBonusSoEECS5                          = 25.000000
ship/shipBonusAB3                              = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Standup Multirole Missile Launcher I
high_1/state                        = active
high_1/damageVolley                 = 2640.000000
high_1/speedWithReload              = 3200.000000
high_1/speedOfReload                = 200.000000
high_1/damagePerSecondWithReload    = 825.000000
high_1/damagePerSecondWithoutReload = 880.000000
high_1/chargeAmount                 = 50.000000
high_1/charge/type                  = Standup Cruise Missile
high_1/charge/emDamage              = 660.000000
high_1/charge/explosiveDamage       = 660.000000
high_1/charge/kineticDamage         = 660.000000
high_1/charge/thermalDamage         = 660.000000

high_2/type                         = Standup Guided Bomb Launcher I
high_2/state                        = active
high_2/damageVolley                 = 3080.000000
high_2/speedWithReload              = 68000.000000
high_2/speedOfReload                = 20000.000000
high_2/damagePerSecondWithReload    = 45.294118
high_2/damagePerSecondWithoutReload = 64.166667
high_2/chargeAmount                 = 3.000000
high_2/speed                        = 48000.000000
high_2/charge/type                  = Standup Light Guided Bomb
high_2/charge/emDamage              = 770.000000
high_2/charge/explosiveDamage       = 770.000000
high_2/charge/kineticDamage         = 770.000000
high_2/charge/thermalDamage         = 770.000000

high_3/type              = Standup Heavy Energy Neutralizer I
high_3/state             = active
high_3/capacitorPeakLoad = 60.000000
high_3/cycleTime         = 15000.000000
high_3/capacitorNeed     = 900.000000

service_1/type                          = Standup Market Hub I
service_1/state                         = online
service_1/serviceModuleFuelAmount       = 30.000000
service_1/serviceModuleFuelOnlineAmount = 2160.000000
