tests/snapshots/bugs-structure_stats-defense_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                      = Astrahus
ship/scanStrength                              = 600.000000
ship/passiveShieldEffectiveRechargeRate        = 0.075003
ship/passiveShieldRechargeRate                 = 0.060002
ship/ehp                                       = 37687499.438412
ship/shieldThermalDamageEffectiveResonance     = 0.200000
ship/shieldKineticDamageEffectiveResonance     = 0.200000
ship/shieldExplosiveDamageEffectiveResonance   = 0.200000
ship/shieldEmDamageEffectiveResonance          = 0.200000
ship/hullThermalDamageEffectiveResonance       = 0.200000
ship/hullKineticDamageEffectiveResonance       = 0.200000
ship/hullExplosiveDamageEffectiveResonance     = 0.200000
ship/hullEmDamageEffectiveResonance            = 0.200000
ship/armorThermalDamageEffectiveResonance      = 0.200000
ship/armorKineticDamageEffectiveResonance      = 0.200000
ship/armorExplosiveDamageEffectiveResonance    = 0.200000
ship/armorEmDamageEffectiveResonance           = 0.200000
ship/shieldEhp                                 = 22499999.664724
ship/hullEhp                                   = 2812499.958090
ship/armorEhp                                  = 12374999.815598
ship/shieldDamageEffectiveResonance            = 0.800000
ship/hullDamageEffectiveResonance              = 0.800000
ship/armorDamageEffectiveResonance             = 0.800000
ship/powerFree                                 = 1055000.000000
ship/cpuFree                                   = 16400.000000
ship/capacitorDepletesIn                       = -1.000000
ship/capacitorPeakDeltaPercentage              = 35.200000
ship/capacitorPeakDelta                        = 101.851852
ship/capacitorPeakLoad                         = 187.500000
ship/capacitorPeakRecharge                     = 289.351852
ship/hp                                        = 2250000.000000
ship/powerOutput                               = 1875000.000000
ship/powerLoad                                 = 820000.000000
ship/cpuOutput                                 = 30000.000000
ship/cpuLoad                                   = 13600.000000
ship/rechargeRate                              = 2700000.000000
ship/maxTargetRange                            = 437500.000000
ship/scanSpeed                                 = 1875.000000
ship/scanRadarStrength                         = 600.000000
ship/scanLadarStrength                         = 600.000000
ship/scanMagnetometricStrength                 = 600.000000
ship/scanGravimetricStrength                   = 600.000000
ship/shieldCapacity                            = 18000000.000000
ship/armorHP                                   = 9900000.000000
ship/maxResearchGangSize                       = 30.000000
ship/shieldRechargeRate                        = 749999996928.000000
ship/capacitorCapacity                         = 312500.000000
ship/shieldUniformity                          = 1.250000
ship/shipBonus2AF                              = 25.000000
ship/shipBonusGC                               = 25.000000
ship/shipBonusCC                               = 25.000000
ship/shipBonusMB                               = 25.000000
ship/shipBonusCB                               = 25.000000
ship/shipBonusAB                               = 25.000000
ship/shipBonusMI                               = 25.000000
ship/shipBonusAI                               = 25.000000
ship/shipBonusCI                               = 25.000000
ship/shipBonusGI                               = 25.000000
ship/scanResolution                            = 50.000000
ship/advancedAgility                           = 0.750000
ship/jumpDriveConsumptionAmount                = 1000.000000
ship/advancedCapitalAgility                    = 0.750000
ship/jumpDriveCapacitorNeed                    = 0.750000
ship/fighterCapacity                           = 250000.000000
ship/structureFullPowerStateHitpointMultiplier = 4.000000
ship/hiddenMissileDamageMultiplier             = 1.070000
ship/hiddenArmorHPMultiplier                   = 1.100000
ship/structurePowerStateArmorPlatingMultiplier = 1.000000
ship/shipBonusUF1                              = 5.000000
ship/shipBonusUF2                              = 5.000000
ship/shipBonusUC1                              = 5.000000
ship/shipBonusUC2                              = 5.000000
ship/shipBonusUB1                              = 5.000000
ship/shipBonusUB2                              = 5.000000
ship/conduitPassengerBonusModAdd               = 25.000000
ship/shipBonusOreDestroyer1                    = 25.000000
ship/shipBonusOreDestroyer2                    = 25.000000
ship/shipBonusOreDestroyer3                    = 25.000000
ship/shipBonusSoEECS1                          = 25.000000
ship/shipBonusSoEECS2                          = 25.000000
ship/shipBonusSoEECS3                          = 25.000000
ship/shipBonusSoEECS4                          = 25.000000
ship/shipBonusSoEECS5                          = 25.000000
ship/shipBonusAB3                              = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

low_1/type  = Standup Layered Armor Plating I
low_1/state = online

low_2/type  = Standup Ballistic Control System I
low_2/state = online

medium_1/type  = Standup Cap Battery I
medium_1/state = online

medium_2/type              = Standup Variable Spectrum ECM I
medium_2/state             = active
medium_2/capacitorPeakLoad = 127.500000
medium_2/cycleTime         = 20000.000000
medium_2/capacitorNeed     = 2550.000000

high_1/type              = Standup Heavy Energy Neutralizer I
high_1/state             = active
high_1/capacitorPeakLoad = 60.000000
high_1/cycleTime         = 15000.000000
high_1/capacitorNeed     = 900.000000

rig_1/type                              = Standup M-Set Missile Precision I
rig_1/state                             = online
rig_1/structureRigMissileExploVeloBonus = 37.500000

service_1/type                          = Standup Cloning Center I
service_1/state                         = online
service_1/serviceModuleFuelAmount       = 7.500000
service_1/serviceModuleFuelOnlineAmount = 540.000000
