tests/snapshots/community-buzzard-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Buzzard
ship/capacitorStablePercentage               = 0.000000
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 150.000000
ship/scanStrength                            = 24.000000
ship/passiveShieldEffectiveRechargeRate      = 3.017143
ship/passiveShieldRechargeRate               = 2.112000
ship/velocityBoost                           = 427.966102
ship/ehp                                     = 1712.081343
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.112500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 754.285711
ship/hullEhp                                 = 471.641779
ship/armorEhp                                = 486.153853
ship/shieldDamageEffectiveResonance          = 0.700000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.650000
ship/powerFree                               = -3.025000
ship/cpuFree                                 = 17.000000
ship/capacitorPeakDeltaPercentage            = -440.398268
ship/capacitorPeakDelta                      = -9.633712
ship/capacitorPeakLoad                       = 11.821212
ship/capacitorPeakRecharge                   = 2.187500
ship/alignTime                               = 6.924990
ship/mass                                    = 1770000.000000
ship/powerOutput                             = 18.975000
ship/powerLoad                               = 22.000000
ship/maxVelocity                             = 1615.576271
ship/cpuLoad                                 = 283.000000
ship/agility                                 = 2.822217
ship/maxTargetRange                          = 26094.080307
ship/warpScrambleStatus                      = -2.000000
ship/shipBonusCF                             = 0.000000
ship/capacitorCapacity                       = 164.062500
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/signatureRadius                         = 349.310339
ship/scanResolution                          = 132.101286
ship/eliteBonusCovertOps1                    = 0.000000
ship/shipBonusCF2                            = 0.000000
ship/warpSpeedMultiplier                     = 8.000000
ship/eliteBonusCovertOps2                    = 0.000000
ship/upgradeLoad                             = 250.000000
ship/warpBubbleImmune                        = 1.000000
ship/eliteBonusCovertOps3                    = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

high_1/type                      = Sisters Core Probe Launcher
high_1/state                     = active
high_1/speedWithReload           = 2750.000000
high_1/speedOfReload             = 1250.000000
high_1/chargeAmount              = 8.000000
high_1/charge/type               = Sisters Core Scanner Probe
high_1/charge/baseSensorStrength = 48.400000

high_2/type              = Interdiction Nullifier II
high_2/state             = active
high_2/capacitorPeakLoad = 0.303030
high_2/cycleTime         = 165000.000000

high_3/type                    = Covert Ops Cloaking Device II
high_3/state                   = active
high_3/moduleReactivationDelay = 5000.000000

medium_1/type                  = Relic Analyzer II
medium_1/state                 = active
medium_1/capacitorPeakLoad     = 2.000000
medium_1/cycleTime             = 10000.000000
medium_1/accessDifficultyBonus = 0.000000
medium_1/virusStrength         = 40.000000

medium_2/type              = Cargo Scanner II
medium_2/state             = active
medium_2/capacitorPeakLoad = 1.333333
medium_2/cycleTime         = 3000.000000

medium_3/type                  = Data Analyzer II
medium_3/state                 = active
medium_3/capacitorPeakLoad     = 2.000000
medium_3/cycleTime             = 10000.000000
medium_3/accessDifficultyBonus = 0.000000
medium_3/virusStrength         = 40.000000

medium_4/type                             = Sensor Booster II
medium_4/state                            = active
medium_4/capacitorPeakLoad                = 1.200000
medium_4/cycleTime                        = 10000.000000
medium_4/maxTargetRangeBonus              = 60.000000
medium_4/scanResolutionBonus              = 0.000000
medium_4/scanGravimetricStrengthPercent   = 0.000000
medium_4/scanLadarStrengthPercent         = 0.000000
medium_4/scanMagnetometricStrengthPercent = 0.000000
medium_4/scanRadarStrengthPercent         = 0.000000
medium_4/charge/type                      = Targeting Range Script

medium_5/type              = 5MN Y-T8 Compact Microwarpdrive
medium_5/state             = active
medium_5/capacitorPeakLoad = 4.500000
medium_5/cycleTime         = 10000.000000

low_1-2/type  = Inertial Stabilizers II
low_1-2/state = online

low_3/type              = Warp Core Stabilizer II
low_3/state             = active
low_3/capacitorPeakLoad = 0.484848
low_3/cycleTime         = 165000.000000

rig_1/type  = Small Ancillary Current Router II
rig_1/state = online

rig_2/type  = Small Ancillary Current Router I
rig_2/state = online

ship                                     = resource Powergrid 22.000000 of 18.975000
ship                                     = skill Caldari Frigate needs 5 has 0
ship                                     = skill Covert Ops needs 1 has 0
ship                                     = skill Spaceship Command needs 3 has 0
ship                                     = skill Electronics Upgrades needs 5 has 0
ship                                     = skill CPU Management needs 2 has 0
ship                                     = skill Power Grid Management needs 2 has 0
high_1/Sisters Core Probe Launcher       = skill Astrometrics needs 1 has 0
high_1/Sisters Core Probe Launcher       = skill Science needs 3 has 0
high_1/charge/Sisters Core Scanner Probe = skill Astrometrics needs 1 has 0
high_1/charge/Sisters Core Scanner Probe = skill Science needs 3 has 0
high_2/Interdiction Nullifier II         = skill Warp Drive Operation needs 5 has 0
high_2/Interdiction Nullifier II         = skill Navigation needs 1 has 0
high_3/Covert Ops Cloaking Device II     = skill Cloaking needs 4 has 0
high_3/Covert Ops Cloaking Device II     = skill CPU Management needs 4 has 0
medium_1/Relic Analyzer II               = skill Archaeology needs 5 has 0
medium_1/Relic Analyzer II               = skill Science needs 3 has 0
medium_1/Relic Analyzer II               = skill Survey needs 3 has 0
medium_1/Relic Analyzer II               = skill CPU Management needs 1 has 0
medium_2/Cargo Scanner II                = skill CPU Management needs 2 has 0
medium_3/Data Analyzer II                = skill Hacking needs 5 has 0
medium_3/Data Analyzer II                = skill Science needs 3 has 0
medium_3/Data Analyzer II                = skill Electronics Upgrades needs 3 has 0
medium_3/Data Analyzer II                = skill CPU Management needs 2 has 0
medium_3/Data Analyzer II                = skill Power Grid Management needs 2 has 0
medium_4/Sensor Booster II               = skill Long Range Targeting needs 4 has 0
medium_4/Sensor Booster II               = skill CPU Management needs 2 has 0
medium_5/5MN Y-T8 Compact Microwarpdrive = skill High Speed Maneuvering needs 1 has 0
medium_5/5MN Y-T8 Compact Microwarpdrive = skill Navigation needs 3 has 0
medium_5/5MN Y-T8 Compact Microwarpdrive = skill Afterburner needs 3 has 0
low_1/Inertial Stabilizers II            = skill Hull Upgrades needs 2 has 0
low_1/Inertial Stabilizers II            = skill Mechanics needs 1 has 0
low_2/Inertial Stabilizers II            = skill Hull Upgrades needs 2 has 0
low_2/Inertial Stabilizers II            = skill Mechanics needs 1 has 0
low_3/Warp Core Stabilizer II            = skill Warp Drive Operation needs 4 has 0
low_3/Warp Core Stabilizer II            = skill Navigation needs 1 has 0
