tests/snapshots/community-buzzard-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Buzzard
ship/capacitorStablePercentage               = 0.000000
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 5.000000
ship/upgradeFree                             = 150.000000
ship/scanStrength                            = 28.800000
ship/passiveShieldEffectiveRechargeRate      = 5.028571
ship/passiveShieldRechargeRate               = 3.520000
ship/velocityBoost                           = 534.957627
ship/ehp                                     = 2140.101679
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.112500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 942.857139
ship/hullEhp                                 = 589.552224
ship/armorEhp                                = 607.692316
ship/shieldDamageEffectiveResonance          = 0.700000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.650000
ship/powerFree                               = 1.718750
ship/cpuFree                                 = 192.000000
ship/capacitorPeakDeltaPercentage            = -205.572294
ship/capacitorPeakDelta                      = -7.494823
ship/capacitorPeakLoad                       = 11.140657
ship/capacitorPeakRecharge                   = 3.645833
ship/alignTime                               = 4.674368
ship/mass                                    = 1770000.000000
ship/hp                                      = 395.000000
ship/powerOutput                             = 23.718750
ship/powerLoad                               = 22.000000
ship/warpFactor                              = -100.000000
ship/maxVelocity                             = 2428.712924
ship/cpuOutput                               = 375.000000
ship/cpuLoad                                 = 183.000000
ship/rechargeRate                            = 140625.000000
ship/agility                                 = 1.904997
ship/maxTargetRange                          = 32617.600384
ship/scanSpeed                               = 1875.000000
ship/warpScrambleStatus                      = -2.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanGravimetricStrength                 = 28.800000
ship/shieldCapacity                          = 660.000000
ship/armorHP                                 = 395.000000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusCF                             = -25.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 205.078125
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 349.310339
ship/scanResolution                          = 165.126607
ship/eliteBonusCovertOps1                    = -100.000000
ship/shipBonusCF2                            = -75.000000
ship/warpSpeedMultiplier                     = 8.000000
ship/eliteBonusCovertOps2                    = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/upgradeLoad                             = 250.000000
ship/warpBubbleImmune                        = 1.000000
ship/eliteBonusCovertOps3                    = -50.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                        = Sisters Core Probe Launcher
high_1/state                       = active
high_1/speedWithReload             = 2750.000000
high_1/speedOfReload               = 1250.000000
high_1/chargeAmount                = 8.000000
high_1/duration                    = 5625.000000
high_1/charge/type                 = Sisters Core Scanner Probe
high_1/charge/baseSensorStrength   = 113.437500
high_1/charge/baseMaxScanDeviation = 0.052734

high_2/type              = Interdiction Nullifier II
high_2/state             = active
high_2/capacitorPeakLoad = 0.303030
high_2/cycleTime         = 165000.000000

high_3/type                    = Covert Ops Cloaking Device II
high_3/state                   = active
high_3/cpu                     = 0.000000
high_3/moduleReactivationDelay = 5000.000000

medium_1/type                  = Relic Analyzer II
medium_1/state                 = active
medium_1/capacitorPeakLoad     = 2.000000
medium_1/cycleTime             = 10000.000000
medium_1/accessDifficultyBonus = 35.000000
medium_1/virusCoherence        = 110.000000
medium_1/virusStrength         = 40.000000

medium_2/type              = Cargo Scanner II
medium_2/state             = active
medium_2/capacitorPeakLoad = 1.777778
medium_2/cycleTime         = 2250.000000
medium_2/duration          = 2250.000000

medium_3/type                  = Data Analyzer II
medium_3/state                 = active
medium_3/capacitorPeakLoad     = 2.000000
medium_3/cycleTime             = 10000.000000
medium_3/accessDifficultyBonus = 35.000000
medium_3/virusCoherence        = 110.000000
medium_3/virusStrength         = 40.000000

medium_4/type                             = Sensor Booster II
medium_4/state                            = active
medium_4/capacitorPeakLoad                = 1.200000
medium_4/cycleTime                        = 10000.000000
medium_4/maxTargetRangeBonus              = 60.000000
medium_4/scanResolutionBonus              = 0.000000
medium_4/scanGravimetricStrengthPercent   = 0.000000
medium_4/scanLadarStrengthPercent         = 0.000000
medium_4/scanMagnetometricStrengthPercent = 0.000000
medium_4/scanRadarStrengthPercent         = 0.000000
medium_4/heatDamage                       = 2.550000
medium_4/charge/type                      = Targeting Range Script

medium_5/type              = 5MN Y-T8 Compact Microwarpdrive
medium_5/state             = active
medium_5/capacitorPeakLoad = 3.375000
medium_5/cycleTime         = 10000.000000
medium_5/capacitorNeed     = 33.750000
medium_5/speedFactor       = 631.250000
medium_5/heatDamage        = 14.250000

low_1-2/type  = Inertial Stabilizers II
low_1-2/state = online

low_3/type              = Warp Core Stabilizer II
low_3/state             = active
low_3/capacitorPeakLoad = 0.484848
low_3/cycleTime         = 165000.000000

rig_1/type  = Small Ancillary Current Router II
rig_1/state = online

rig_2/type  = Small Ancillary Current Router I
rig_2/state = online
